--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,6 +25,9 @@ allprojects {
 }
 
 dependencies {
-    implementation "com.facebook.react:react-native:+"
-    implementation files('libs/bottomsheet-1.3.1.aar')
+    compile "com.facebook.react:react-native:+"
+    compile(name:'bottomsheet-1.3.1', ext:'aar')
+    
+    // the method below is not supported on this version of gradle
+    //compile files('libs/bottomsheet-1.3.1.aar')
 }
